test/ill-formed/0072_function_pointer_in_struct_array_param.c
typedef struct {
  int (*f) (void);
  double y;
} s;
void f (s a[static const restrict 5]) {}
